# MyZKP

./: LICENSE  README.md  circom-overview.drawio  main.tex  references.bib
myzkp/: Cargo.toml  a.txt  b.txt  perf.data
myzkp/examples/: da.rs
myzkp/examples/sumcheck/: Cargo.toml
myzkp/examples/sumcheck/src/: lib.rs  main.rs  prover.rs  utils.rs  verifier.rs
myzkp/examples/sumcheck_cpu/: Cargo.toml
myzkp/examples/sumcheck_cpu/src/: main.rs
myzkp/examples/sumcheck_cuda/: Cargo.toml
myzkp/examples/sumcheck_cuda/src/: main.rs  prover.rs  utils.rs  verifier.rs
myzkp/src/modules/: bn128.rs  curve.rs  efield.rs  field.rs  mod.rs  polynomial.rs  qap.rs  r1cs.rs  ring.rs  snark.rs  utils.rs
myzkp/src/modules/algebra/: efield.rs  field.rs  gemini.rs  kzg.rs  merkle.rs  mod.rs  mpolynomials.rs  ntt.rs  polynomial.rs  reedsolomon.rs  ring.rs  sumcheck.rs  utils.rs
myzkp/src/modules/arithmetization/: qap.rs  r1cs.rs
myzkp/src/modules/das/: avail.rs  celestia.rs  eigenda.rs  mod.rs  utils.rs
myzkp/src/modules/educational_protocols/: dl.rs  kea.rs  mod.rs  naive.rs  nizk.rs  sz.rs  zk.rs
myzkp/src/modules/merkle/: merkle.rs
myzkp/src/modules/single_polynomial/: dl.rs  kea.rs  mod.rs  nizk.rs  protocol_1.rs  protocol_2.rs  protocol_3.rs  protocol_4.rs  protocol_5.rs  zk.rs
myzkp/src/modules/snark/: mod.rs  protocol_1.rs  protocol_2.rs  protocol_3.rs  protocol_4.rs
myzkp/src/modules/zksnark/: mod.rs  naive.rs  non_interchangibility.rs  pinocchio.rs  protocol_1.rs  protocol_2.rs  protocol_3.rs  protocol_4.rs  utils.rs  variable_consistency.rs
(+116 files in other folders)
