[package]
name = "myzkp"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
rand = "0.8.5"
lazy_static = "1.4.0"
paste = "1.0.15"
serde = { version = "1.0.27", features = ["derive"] }
blake2 = "0.10.6"
sha2 = "0.10.8"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.release] 
debug = false
